--- a/ui/src/styles/Articles.css
+++ b/ui/src/styles/Articles.css
@@ -3,11 +3,13 @@
     padding: 30px;
     margin: 10px 0;
     background-color: white;
-    border: 1px solid RGB(0, 0, 0, 0.07);
+    box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.15);
+    transition: 0.3s;
+    cursor: pointer;
 }
 
 .article_card:hover {
-    cursor: pointer;
+    box-shadow: 0 3px 12px 0 rgba(0, 0, 0, 0.3);
 }
 
 .article_page {
