--- a/ui/src/styles/Button.css
+++ b/ui/src/styles/Button.css
@@ -12,6 +12,12 @@
     padding: 8px;
 }
 
+.btn--large {
+    width: 200px;
+    padding: 12px;
+    font-weight: 500;
+}
+
 .btn:hover {
     background-color: #f9f9f9;
 }
