--- a/ui/src/styles/Navbar.css
+++ b/ui/src/styles/Navbar.css
@@ -6,6 +6,7 @@
     height: 60px;
     display: flex;
     border-bottom: 1px solid RGB(0,0,0,0.1);
+    background-color: white;
 }
 
 .navbar__item {
