--- a/ui/src/styles/Index.css
+++ b/ui/src/styles/Index.css
@@ -5,6 +5,11 @@
     gap: 10px;
 }
 
+.index__word__container {
+    display: flex;
+    flex-direction: column;
+}
+
 .index__word {
     display: inline-grid;
     grid-template-columns: repeat(3, 1fr);
@@ -17,12 +22,15 @@
     border: 1px solid RGB(0, 0, 0, 0.1);
 }
 
+
 .index__word__table {
+    background-color: #ffffff;
+    margin-top: -3px;
+    border-radius: 0 0 5px 5px;
     display: flex;
     flex-direction: column;
     gap: 5px;
     border: 1px solid RGB(0, 0, 0, 0.07);
-    border-radius: 5px;
     padding: 5px;
 }
 
@@ -39,5 +47,12 @@
 .index__word__row--clickable:hover {
     cursor: pointer;
     background-color: #e6eff5;
+}
 
+
+.index__pagination {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    margin-top: 15px;
 }
